# signals

./: .envrc.example  .gitignore  .gitmodules  .prettierrc  AGENTS.md  CLAUDE.md  LICENSE  LITEPAPER.md  README.md  WHITEPAPER.md  biome.json  bun.lockb  package.json  pnpm-lock.yaml  turbo.json  vercel.json  wagmi.config.ts
apps/simulations/: .gitignore  ANALYSIS_RESULTS.md  MAINTAINABILITY.md  README.md  STATISTICAL_ANALYSIS.md  pyproject.toml  test_statistical_framework.py
apps/simulations/examples/: analysis_insights.py  maintainable_example.py  plot_results.py  quick_visualization_demo.py  statistical_analysis_demo.py  statistical_analysis_with_plots.py
apps/simulations/scripts/: setup_maintainable_dev.py
apps/simulations/src/: arbitrum-proposals.json  discourse.py  helpers.py  main.py  plot_locks.py  plots.py  proposals.py  visualize.py
apps/simulations/src/cadcad/: allocate.py  config.py  helpers.py  model.py  parameters.py  policies.py  simulation.py  state.py  sufs.py
apps/simulations/src/cadcad/sufs/: __init__.py  base.py  governance.py  lifecycle.py  time.py  (+1 more)
apps/simulations/src/figs/: charts.py  incentives.py  support.py
apps/simulations/src/statistical_analysis/: __init__.py  experiment_runner.py  metrics.py  visualization.py
apps/simulations/src/supply/: __init__.py  allocate.py  distributions.py
apps/simulations/src/vis/: support.py
apps/simulations/src/visualization/: __init__.py  base.py  data_loader.py  main.py
apps/simulations/tests/: __init__.py  conftest.py  test_policies.py  test_simulation.py  test_state.py  test_sufs.py
(+559 files in other folders)
